# PyTissueOptics

./: .gitignore  404.html  NumbaCupyQuickTests.ipynb  README.md  RELEASING.md  benchmark_cpu_vs_opencl.py  code.py  demoVectors.py  demoVectorsCupy.py  demoVectorsNumpy.py  geometry-old.py  geometry.py  index.html  material.py  mkdocs.yml  montecarlo.py  object.py  objects.inv  photon.py  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt  safetyCalculations.py  setup.py  sitemap.xml  stats.py  surface.py  test.py  tox.ini  vector.py
.github/workflows/: ci.yaml  lint.yaml  pages.yml  test-coverage.yaml  tests.yaml
api/: index.html
api/rayscattering/: index.html
api/scene/: index.html
docker/: Dockerfile
docs/api/: index.md  rayscattering.md  scene.md
env-python3.10/: pyvenv.cfg
examples/: __init__.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py
examples/benchmarks/: cube60.py  env.py  skinvessel.py  sphshells.py
examples/rayscattering/: ex01.py  ex02.py  ex03.py  ex04.py  example.py  exampleComplex.py  exampleInfinite.py  exampleSimple.py  exampleenv.py
examples/scene/: example0.py  example1.py  example2.py  example3.py
paper_figures/latest_figures/: README.md
paper_figures/previous_figures/: fig_paper_sa.py  (+10 more)
pytissueoptics/: __init__.py  __main__.py  detector.py  envtest.py  geometry.py  interactionFinder.py  intersectionFinder.py  logger.py  material.py  photon.py  photons.py  readme.backup.md  report.py  scalars.py  source.py  stats.py  surface.py  testExamples.py  vector.py  vectors.py  world.py
search/: search_index.json
(+685 files in other folders)
